test/libsolidity/syntaxTests/nameAndTypeResolution/no_address_members_on_contract_call_v050.sol
pragma experimental "v0.5.0";
contract C {
    function f() public {
        this.call;
    }
}
// ----
// TypeError: (77-86): Member "call" not found or not visible after argument-dependent lookup in contract C
